--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,3 +10,7 @@ body {
 .button {
   @apply rounded-sm block my-4
 }
+
+.primary-gradient {
+  background-image: linear-gradient(to bottom right, #ff7a3d, #ff5d13);
+}
