--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,9 +8,17 @@ body {
 }
 
 .button {
-  @apply rounded-sm block my-4
+  @apply rounded-md block my-4
 }
 
 .primary-gradient {
   background-image: linear-gradient(to bottom right, #ff7a3d, #ff5d13);
+}
+
+.green-gradient {
+  background-image: linear-gradient(to bottom right, #51f34b, #35df26);
+}
+
+.yellow-gradient {
+  background-image: linear-gradient(to bottom right, #f9e239, #f9c939);
 }
