--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,30 @@ body {
   overflow-y: hidden;
 }
 
+input[type="checkbox"] {
+  -webkit-appearance: none;
+  border: 1px solid white;
+  box-sizing: border-box;
+  @apply h-4 w-4 rounded-sm bg-background;
+}
+
+input[type="checkbox"]:checked {
+  @apply primary-gradient border-0;
+}
+
+input[type="checkbox"]::before {
+  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22currentColor%22%20class%3D%22w-4%20h-4%22%3E%0A%20%20%3Cpath%20fill-rule%3D%22evenodd%22%20d%3D%22M12.416%203.376a.75.75%200%200%201%20.208%201.04l-5%207.5a.75.75%200%200%201-1.154.114l-3-3a.75.75%200%200%201%201.06-1.06l2.353%202.353%204.493-6.74a.75.75%200%200%201%201.04-.207Z%22%20clip-rule%3D%22evenodd%22%20%2F%3E%0A%3C%2Fsvg%3E%0A");
+  display: none;
+  content: '';
+  width: 100%;
+  height: 100%;
+}
+
+input[type="checkbox"]:checked::before{
+  display: block;
+}
+
+
 .button {
   @apply rounded-md block my-4
 }
