--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,7 @@ input[type="checkbox"]:checked::before{
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .filter-div > .unselected:hover {
   @apply text-primary;
   transition-duration: 200ms;
@@ -82,4 +83,8 @@ input[type="checkbox"]:checked::before{
   transition-duration: 200ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.desktop-nav {
+  @apply items-center;
 }
